# poetry-contest

./: .gitignore  Cargo.toml
benches/: memory.rs
examples/: generate_data.rs  profile_target.rs  profiler.rs
src/: lib.rs  v01_naive.rs  v01_simple.rs  v02_borrow_document.rs  v02_less_cloning.rs  v03_borrow_document.rs  v03_borrow_more.rs  v04_borrow_more.rs  v04_reserve_and_reuse.rs  v05_raw_contents.rs  v05_reserve_and_reuse.rs  v06_raw_contents.rs  v06_reuse_more.rs  v07_faster_maps.rs  v07_frozen.rs  v07_reuse_more.rs  v08_faster_maps.rs
