[package]
name = "poetry-contest"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15.0"

[dev-dependencies]
alloc_tracker = "0.5.8"
criterion = "0.7"
rand = "0.9"

[[bench]]
name = "memory"
harness = false

[profile.release]
# This ensures we have high quality data with proper stack traces when profiling.
debug = "line-tables-only"
