[package]
name = "poetry-contest"
version = "0.1.0"
edition = "2024"

[dependencies]
foldhash = "0.2.0"
json-escape = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.15.0"

[dev-dependencies]
alloc_tracker = "0.5.8"
criterion = "0.7"
rand = "0.9"

[[bench]]
name = "memory"
harness = false

[profile.release]
# This ensures we have high quality data with proper stack traces when profiling.
debug = "line-tables-only"
